# cortex

./: .envrc.sample  .gitignore  .pdm-python  Dockerfile  README.md  alembic.ini  docker-compose-prod.yml  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: README  env.py
alembic/versions/: 0139cd0c063e_add_initial_schema.py  52dbac940d77_add_user_table.py  632109ec6093_add_chatbot_dialogue_document_table.py  8c51fcae49ce_add_sync_fields_to_dialogue_model.py  ae8d4e8c40ff_recreating_missing_migration.py  b4b50fe558e2_update_datetime_columns_to_timestamptz.py  e4c689408a58_add_user_table.py  e6f5507f9c72_add_settings_field_to_chatbots.py
app/: main.py
app/agents/: qa.py  tools.py
app/auth/: cognito.py  dependencies.py  middleware.py
app/config/: __init__.py  default_chatbot_settings.yaml  default_settings.py  settings.py
app/core/: celery.py  logging.py
app/db/: client.py
app/models/: __init__.py  base.py  chatbot.py  dialogue.py  document.py  users.py
app/routers/: __init__.py  chat.py  chatbot.py  dialogues.py  document.py  users.py
app/schemas/: __init__.py  chatbot.py  chatbot_settings.py  cognito.py  dialogue.py  document.py  users.py
app/services/: chatbot.py  dialogues.py  document.py  index.py  parse.py  s3.py  users.py
app/services/rag/: embeddings.py  vectorstore.py  vsi.py
app/tasks/: __init__.py  dialogues.py  documents.py
app/temporal/: README.md  activities.py  client.py  errors.py  run_worker.sh  shared.py  worker.py  workflows.py
app/temporal/activities/: documents.py
chatterbox_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
prisma/: schema.prisma
tests/: conftest.py  test_chatbot.py  test_users.py
