[project]
name = "chatterbox-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "prisma>=0.15.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.6.1",
    "python-multipart>=0.0.9",
]
