[project]
dependencies = [
    "fastapi[standard]",
    "sqlalchemy>=2.0.0",
    "asyncpg",
    "alembic",
    "cognitojwt[async]",
    "slowapi>=0.1.6",
    "boto3>=1.28.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "mistralai>=1.6.0",
    "llama-index-core>=0.12.28",
    "llama-index-vector-stores-postgres>=0.4.2",
    "pyyaml>=6.0",
    "llama-index-embeddings-openai>=0.3.1",
    "nest-asyncio>=1.6.0",
    "llama-index-llms-openai>=0.3.30",
    "llama-index-storage-chat-store-postgres>=0.2.0",
]
name = "chatterbox-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
